# XRM-SSD

./: .gitignore  CAPABILITIES.md  POLO_INSTRUCTIONS.md  README.md  README_WebArena.md  The Deterministic Scheduling Moat.txt  XRM-SSD V24.5_Summary.txt  XRM-SSD V7.0 as the Physical Implementation Engine for τ-Law Architectures  XRM_SSD_V23.3_L4_Test.ipynb  requirements.txt  test_runner.py  webarena_evaluator.py
.github/workflows/: parity.yml
Data/: roofline_results
LPCC engine/: install_host.bat  native_host.spec
Notebooks/: XRM_SSD_V23.3_L4_Test.ipynb
Test results/v23.3/: XRM-SSD V23.3 Performance Benchmark Report.txt
Test results/v24.9 Mature Brain/: advanced_test_report_20260720_005551.json  advanced_test_summary_20260720_005551.json  advanced_test_v61_report_20260720_152834.json  advanced_test_v61_summary_20260720_152834.json  brain_x_v8.txt  (+17 more)
examples/: xrm_mind_port.mind
improved/: .gitignore  Cargo.toml  Mind.toml  README.md  RUNBOOK_FOR_POLO.md  build.sh
improved/.cargo/: config.toml
improved/protection/: README.md  build.sh  exports.map  harden.sh
improved/protection/src/: protection.c  protection.h  protection.mind  xrmgov_protected.c
improved/src/: gov9.mind  lib.mind  main.rs  protection.rs
improved/tests/: determinism.rs  invariants.rs
janibekov-mapping/: REPRODUCIBILITY_CHECKLIST_v2.0.TXT  Reproducibility_Checklist.txt  janibekov_experiment.py  results.txt
m2354-rge-firmware/: .gitignore  CLAUDE.md  Makefile  README.md
protection/: Mind.toml  README.md  exports.map
test-harness/: Makefile  README.md  compare.py  seal_blob.sh
(+46 files in other folders)
