[package]
name = "xrm_mind_port"
version = "0.2.0"
edition = "2021"
authors = ["STARGA, Inc. <ceo@star.ga>"]
description = "XRM-SSD + MIND hybrid bench harness"

[dependencies]
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "xrm_mind_port"
path = "src/main.rs"
